# C-Memory-Leak-detector

./: CMakeLists.txt  README.md  debug_step4.txt
build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MemSentry.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  memsentry.vcxproj  memsentry.vcxproj.filters  memsentry_core.vcxproj  memsentry_core.vcxproj.filters
cmake/: CompilerWarnings.cmake  Platform.cmake
docs/: architecture.md
include/memsentry/: memsentry.hpp
include/memsentry/capture/: stacktrace_capture.hpp
include/memsentry/core/: allocation_record.hpp  allocation_tracker.hpp  allocator_hooks.hpp  config.hpp  shadow_memory.hpp
include/memsentry/detectors/: cycle_detector.hpp  detector_base.hpp  double_free_detector.hpp  fragmentation_analyzer.hpp  invalid_free_detector.hpp  leak_detector.hpp  mismatch_detector.hpp  overflow_detector.hpp  uninit_detector.hpp  use_after_free_detector.hpp
include/memsentry/platform/: linux_platform.hpp  platform.hpp  windows_platform.hpp
include/memsentry/reporting/: console_reporter.hpp  file_reporter.hpp  report_engine.hpp  report_types.hpp  statistics.hpp
include/memsentry/threading/: background_scanner.hpp  lock_free_queue.hpp  thread_safe_map.hpp
samples/: double_free_demo.cpp  leak_demo.cpp  overflow_demo.cpp
src/capture/: stacktrace_capture.cpp
src/cli/: cli_options.cpp  cli_options.hpp  compiler_driver.cpp  compiler_driver.hpp  main.cpp  result.hpp  runner.cpp  runner.hpp
src/core/: allocation_tracker.cpp  allocator_hooks.cpp  memsentry.cpp  shadow_memory.cpp
src/detectors/: cycle_detector.cpp  double_free_detector.cpp  fragmentation_analyzer.cpp  invalid_free_detector.cpp  leak_detector.cpp  mismatch_detector.cpp  overflow_detector.cpp  uninit_detector.cpp  use_after_free_detector.cpp
src/platform/: linux_platform.cpp  windows_platform.cpp
src/reporting/: console_reporter.cpp  file_reporter.cpp  report_engine.cpp  statistics.cpp
src/threading/: background_scanner.cpp
